--- a/task_radar/client/package.json
+++ b/task_radar/client/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
