--- a/task_radar/client/package.json
+++ b/task_radar/client/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
